fix: dl background was not covering the full area

--- a/style.css
+++ b/style.css
@@ -1215,7 +1215,8 @@ input::-webkit-search-cancel-button:hover {
 	width: 100%;
 	width: 100vw;
 	min-height: 100%;
-	min-height: 100svh;
+	min-height: 100vh;
+	min-height: 100dvh;
 	/* max-height: 100svh; */
 	padding: 1em;
 	font-family: Arial, Helvetica, sans-serif;
